2006-10-13  David Trowbridge  <trowbrds@gmail.com>

	* plugins/notification/notification.c:
	* plugins/notification/Makefile.am:
	* configure.ac:
	D plugins/notification/eggtrayicon.c:
	D plugins/notification/eggtrayicon.h:
	  - Apply Christian Persch's patch to port the notification plugin to
	    GtkStatusIcon, and bump the required GTK+ version to 2.10.0.

2006-10-13  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	  - Fix a potential crasher if another message comes in right after
	    we've closed a channel (#356612).

2006-10-13  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	  - Also fix the stupid bug that was preventing the conversation panel
	  from adapting to theme changes (#347956).

2006-10-13  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	  - Make nickname button properly adjust to theme changes (#348870).

2006-10-13  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-dcc.c:
	* src/fe-gnome/util.c:
	* src/fe-gnome/text-entry.c:
	* src/fe-gnome/preferences-page-plugins.c:
	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/status-bar.c:
	* src/fe-gnome/preferences-page-irc.c:
	* src/fe-gnome/topic-label.c:
	* src/fe-gnome/preferences-page-colors.c:
	* src/fe-gnome/preferences-page-networks.c:
	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/userlist.c:
	* src/fe-gnome/preferences-page-effects.c:
	* src/fe-gnome/setup-dialog.c:
	  - More ws cleanup.

2006-10-12  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/xtext.c:
	  - Lots of cleanup/ws.

2006-10-11  David Trowbridge  <trowbrds@gmail.com>

	* src/common/outbound.c:
	* src/common/outbound.h:
	* src/common/servlist.c:
	* src/common/dbus/CVS/Entries:
	* src/common/util.c:
	* src/common/cfgfiles.c:
	* src/common/text.c:
	* src/common/dcc.c:
	* src/common/plugin.c:
	* src/common/inbound.c:
	* src/common/fe.h:
	* src/common/server.c:
	* src/common/xchat.c: