@@ -1,3 +1,9 @@
+2006-10-14  David Trowbridge  <trowbrds@gmail.com>
+
+	* src/fe-gnome/userlist-gui.c:
+	  - One last fix before bed -- pop up the userlist on the correct
+	    monitor in xinerama situations. (#347045)
+
 2006-10-13  David Trowbridge  <trowbrds@gmail.com>
 
 	* plugins/notification/notification.c:
